UCSFD8-882 fixed spacing issues

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -9504,31 +9504,31 @@ a[href*="http"] .article-header__date {
   .ckpullquote--full-right,
   .wysiwyg_quote--full-right,
   .narrow-page-header__subheading .blockquote--full-right {
-    margin: 0 -1.25rem; }
+    margin: 0 -1.25rem;
+    padding-right: 6%; }
     @media (min-width: 769px) {
       .page_narrow .blockquote--full-right,
       .paragraph-text-block .blockquote--full-right,
       .ckpullquote--full-right,
       .wysiwyg_quote--full-right,
       .narrow-page-header__subheading .blockquote--full-right {
-        margin: 0 -8rem 0 0;
-        margin-left: -1rem;
-        border-left: 1rem solid #007CBE; } }
+        border-left: 1rem solid #007CBE;
+        margin: 0 -20% 0 -1rem;
+        padding: 0 9% 0 3.9rem; } }
+    @media (min-width: 1050px) {
+      .page_narrow .blockquote--full-right,
+      .paragraph-text-block .blockquote--full-right,
+      .ckpullquote--full-right,
+      .wysiwyg_quote--full-right,
+      .narrow-page-header__subheading .blockquote--full-right {
+        padding-right: 6%; } }
     @media (min-width: 769px) {
       .page_narrow .blockquote--full-right .blockquote-content__text,
       .paragraph-text-block .blockquote--full-right .blockquote-content__text,
       .ckpullquote--full-right .blockquote-content__text,
       .wysiwyg_quote--full-right .blockquote-content__text,
       .narrow-page-header__subheading .blockquote--full-right .blockquote-content__text {
-        padding-left: 3.9rem;
         padding-right: 0; } }
-    @media (min-width: 769px) {
-      .page_narrow .blockquote--full-right .blockquote-content__cite,
-      .paragraph-text-block .blockquote--full-right .blockquote-content__cite,
-      .ckpullquote--full-right .blockquote-content__cite,
-      .wysiwyg_quote--full-right .blockquote-content__cite,
-      .narrow-page-header__subheading .blockquote--full-right .blockquote-content__cite {
-        padding-left: 3.9rem; } }
 
 .ckpullquote {
   padding-bottom: 50px;
