--- a/docroot/themes/custom/ucsf/scss/components/_blockquote.scss
+++ b/docroot/themes/custom/ucsf/scss/components/_blockquote.scss
@@ -1,7 +1,3 @@
-// For elements that need to be aligned to .page-narrow edge
-$container-edge: -1.25rem;
-$container-edge-large: -8rem;
-
 // Space that needs to scale based on font-size
 $padding-quote-left: 3.9rem;
 $quote-border-left: 1rem;
@@ -266,24 +262,22 @@ $blockquote-colors: (
   }
 
   &--full-right {
-    margin: 0 $container-edge;
+    margin: 0 -1.25rem;
+    padding-right: 6%;
 
     @include breakpoint($new-small) {
-      margin: 0 $container-edge-large 0 0;
-      margin-left: -($quote-border-left);
       border-left: $quote-border-left solid #007CBE;
+      margin: 0 -20% 0 (-$quote-border-left);
+      padding: 0 9% 0 $padding-quote-left;
+    }
+
+    @include breakpoint($new-large) {
+      padding-right: 6%;
     }
 
     .blockquote-content__text {
       @include breakpoint($new-small) {
-        padding-left: $padding-quote-left;
         padding-right: 0;
-      }
-    }
-
-    .blockquote-content__cite {
-      @include breakpoint($new-small) {
-        padding-left: $padding-quote-left;
       }
     }
   }
